--- a/requirements.txt
+++ b/requirements.txt
@@ -111,7 +111,7 @@ polars==1.26.0
     # via -r requirements.in
 protobuf==5.29.4
     # via streamlit
-psycopg2==2.9.10
+psycopg2-binary
     # via -r requirements.in
 pyarrow==19.0.1
     # via streamlit
