--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ attrs==25.3.0
     #   jsonschema
     #   referencing
 beautifulsoup4==4.13.3
+pymysql
     # via -r requirements.in
 blinker==1.9.0
     # via streamlit
